# safecitydataservice

./: .dockerignore  .env.local  .env.stage  .gitignore  .replit  Dockerfile  README.md  app.py  cloudbuild.yaml  config.py  constants.py  docker-compose.yml  env.yaml  main.py  pyproject.toml  replit.nix  requirements.txt
.github/workflows/: deploy.yml
api/: citycrime_api.py
api/controllers/: crime_data_analysis_controller.py  upload_crime_data_controller.py
api/routes/: crime_data_analysis_route.py  upload_crime_data_route.py
db/: firestore_db.py
models/: crime_data_models.py
services/: crime_data_analysis_service.py  upload_coordinate_crime_data_service.py  upload_crime_data_service.py
util/: citycrime_data.py  crime_data_util.py  fetch_crime_data.py  gcs_util.py  logger.py
