[tool.poetry]
name = "safecitywalkdataservice"
version = "0.1.0"
description = "Safe City Walk Data Service"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.95.0"
uvicorn = "0.15.0"
pydantic = "1.10.2"
pytz = "2024.1"
requests = "2.26.0"
python-dotenv = "0.19.0"
google-cloud-storage = "2.10.0"
google-cloud-bigquery = "3.11.4"
google-auth = "2.23.3"
google-auth-oauthlib = "1.1.0"
pyyaml = "6.0.1"

[tool.poetry.scripts]
start = "main:main"
dev = "main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"